--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -187,9 +187,9 @@ body.custom {
         min-height: 450px;
         background-image: linear-gradient(#fff, #777);
         background-size: cover;
-        background-position: bottom;
+        background-position: top;
         background-repeat: no-repeat;
-        background-image: url("../images/backdrop2.png");
+        background-image: url("../images/backdrop.png");
         text-align: center;
         margin-bottom: 1rem;
     }
