--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -149,19 +149,26 @@ body.home {
         }
 
         .actions button {
+            display: inline-block;
             font-weight: 300;
             font-size: 0.8rem;
             letter-spacing: 0.1rem;
             padding: 0.5rem;
-            padding-left: 3rem;
-            padding-right: 3rem;
+            padding-left: 5rem;
+            padding-right: 5rem;
             background-color: rgb(51, 51, 51);
             text-transform: uppercase;
             color: white;
+            margin: 0 0.3rem 0 0.3rem;
         }
 
         .actions button.primary {
             background-color: rgb(87, 132, 171);
+        }
+
+        .message {
+            font-weight: bold;
+            font-size: 1.5rem;
         }
 
         #car-wrapper {
