Changed header to "Get set"

--- a/views/pages/order.ejs
+++ b/views/pages/order.ejs
@@ -13,7 +13,7 @@
         </div>
 
         <div class="main text-center">
-            <h1>Get ready.</h1>
+            <h1>Get set.</h1>
             <div id="car-wrapper">
                 <img id="car-photo" v-bind:src="'/images/' + vehicle.model__c.toLowerCase() + '.png'" v-bind:style="{'-webkit-filter': 'hue-rotate(' + vehicle.paint__c + 'deg)'}" />
             </div>
