--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,22 +1,22 @@
 <nav class="row">
-  <div class="logo col-3">
-    <a href="/">
-      <img src="/images/electron-logo-horizontal.png" />
-    </a>
-  </div>
-  <div class="models col-6 text-center">
-    <span>
-      <a href="javascript:void(0)" v-on:click="changeModel('Flash')">Flash</a>
-    </span>
-    <span>
-      <a href="javascript:void(0)" v-on:click="changeModel('Flint')">Flint</a>
-    </span>
-    <span>
-      <a href="javascript:void(0)" v-on:click="changeModel('Flare')">Flare</a>
-    </span>
-  </div>
-  <div class="login col-3 text-right" data-toggle="modal" data-target="#loginModal">
-    <span v-if="account.firstname">Hi, {{account.firstname}}</span>
-    <span v-else>Login</span>
-  </div>
+    <div class="logo col-3">
+        <a href="/">
+            <img src="/images/electron-logo-horizontal.png" />
+        </a>
+    </div>
+    <div class="models col-6 text-center">
+        <span>
+            <a href="javascript:void(0)" v-on:click="changeModel('Flash')">Flash</a>
+        </span>
+        <span>
+            <a href="javascript:void(0)" v-on:click="changeModel('Flint')">Flint</a>
+        </span>
+        <span>
+            <a href="javascript:void(0)" v-on:click="changeModel('Flare')">Flare</a>
+        </span>
+    </div>
+    <div class="login col-3 text-right" data-toggle="modal" data-target="#loginModal">
+        <span v-if="account.firstname">Login</span>
+        <span v-else>Login</span>
+    </div>
 </nav>
