Made login work without Contact

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,7 +16,7 @@
         </span>
     </div>
     <div class="login col-3 text-right" data-toggle="modal" data-target="#loginModal">
-        <span v-if="account.firstname">Login</span>
+        <span v-if="account.firstname">Hi, {{account.firstname}}</span>
         <span v-else>Login</span>
     </div>
 </nav>
