Add cursor pointer to buttons

--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -149,6 +149,7 @@ body.home {
         }
 
         .actions button {
+            cursor: pointer;
             display: inline-block;
             font-weight: 300;
             font-size: 0.8rem;
@@ -229,6 +230,7 @@ body.custom {
                 width: 50px;
                 height: 50px;
                 border: 1px solid rgb(204, 204, 204);
+                cursor: pointer;
             }
 
             .red {
@@ -308,6 +310,7 @@ body.custom {
                 }
 
                 button {
+                    cursor: pointer;
                     background-color: rgb(70, 70, 70);
                     border: none;
                     color: white;
