Added Loan Application Feature

--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -269,7 +269,7 @@ body.custom {
                 padding: 0 !important;
                 color: white;
 
-                #cash {
+                #cash, #loan, #lease {
                     h2 {
                         padding-top: 0.5rem;
                         padding-bottom: 1.1rem;
@@ -283,6 +283,16 @@ body.custom {
                     p {
                         padding-bottom: 1.2rem;
                         margin: 0;
+                    }
+                    .row {
+                        margin-bottom: 10px !important;
+                    }
+                    label {
+                        display: block;
+                        margin-bottom: .3rem;
+                    }
+                    input {
+                        width: 100%;
                     }
                 }
 
@@ -322,6 +332,10 @@ body.custom {
 
                 .selected {
                     background-color: inherit;
+                }
+
+                button {
+                    outline: none;
                 }
 
                 .tabcontent {
