Added modify button after purchase.

--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -328,14 +328,15 @@ body.custom {
                     margin: 0;
                     width: 100%;
                     display: block;
+                    outline: none;
                 }
 
                 .selected {
                     background-color: inherit;
                 }
 
-                button {
-                    outline: none;
+                .modify {
+                    margin-top: 130px;
                 }
 
                 .tabcontent {
