--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -178,6 +178,10 @@ body.home {
             animation-duration: 1s;
         }
 
+        p {
+            font-size: 1.2rem;
+        }
+
         .customization {
             padding-top: 1rem;
             text-transform: uppercase;
