--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -311,6 +311,7 @@ body.custom {
                     h3 {
                         font-size: 1.2rem;
                         line-height: 1.4;
+                        padding-bottom: 1.2rem;
                     }
                 }
 
