--- a/views/pages/dberror.ejs
+++ b/views/pages/dberror.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body class="home">
-    <div id="app" class="page-wrapper">
+    <div id="app" class="page-wrapper" onclick="location.href='/';">
         <div>
             <% include ../partials/nav.ejs %>
         </div>
